--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
     <head>
         <script src="./script.js" defer></script>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-
+        <div id="center">
+            <div id="etchSketch"></div>
+        </div>
     </body>
 </html>
