Add grid dimension info and button to change dimensions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div id="center">
+            <div id="interactive"></div>
             <div id="etchSketch"></div>
         </div>
     </body>
