Add comments to index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div id="center">
-            <div id="interactive"></div>
-            <div id="etchSketch"></div>
+            <div id="interactive"></div> <!--contains the grid dimension information and the button the change the grid dimensions-->
+            <div id="etchSketch"></div> <!--contains the etch a sketch grid-->
         </div>
     </body>
 </html>
