Add button to reset the grid colours to White

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div id="center">
             <div id="interactive"></div> <!--contains the grid dimension information and the button the change the grid dimensions-->
             <div id="etchSketch"></div> <!--contains the etch a sketch grid-->
+            <div id="resetButton"></div> <!--contains the reset button-->
         </div>
     </body>
 </html>
